--- a/css/contact-us.css
+++ b/css/contact-us.css
@@ -1,7 +1,3 @@
-.contact {
-    width: 80%;
-}
-
 .contact__heading {
     border-bottom: 1px solid rgb(149, 152, 146);
     color: #a9a9a9;
@@ -29,28 +25,8 @@
     line-height: 150%;
 }
 
-@media (min-width: 1000px) {
-    .contact {
-        width: 78%;
-    }
-}
-
-@media (min-width: 1140px) {
-    .contact {
-        width: 74%;
-    }
-}
-
-@media (min-width: 1300px) {
-    .contact {
-        width: 70%;
-    }
-}
-
-@media (min-width: 1400px) {
-    .contact {
-        width: 68%;
-    }
+footer {
+    margin-top: 15px;
 }
 
 @media (max-width: 920px) {
@@ -65,15 +41,5 @@
 
     .contact__numbers {
         margin-top: 40px;
-    }
-}
-
-footer {
-    margin-top: 15px;
-}
-
-@media (max-width: 500px) {
-    .contact {
-        width: 92%;
     }
 }
